# wtx_viewer_cloud

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  update.yml
ardcnectar/: .gitignore  README.md  auth.py  cloud_init.yaml  deploy.py  generate_app_cred.py  instance_config.yaml  pyproject.toml  teardown.py
ardcnectar/tofu/: .gitignore  .terraform.lock.hcl  cloud_init.yaml.tftpl  compute.tf  dns.tf  github.tf  identity.tf  network.tf  outputs.tf  providers.tf  variables.tf  versions.tf
data_config/: Dockerfile  README.md  cache.conf  entrypoint.sh  nginx.conf  test_swift.sh
server_config/: Dockerfile  README.md  index.html  nginx.conf  test_proxy.sh
vitessce_config/: Dockerfile  README.md  config.json
vitessce_config/src/: export_config.py  utils.py
